--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "main": "dist/client.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/avezov/cityads-iframe-transport.git"
+  },
   "scripts": {
     "build": "tsc",
     "build-dev": "tsc --watch"
